--- a/Views/Home/UserProfilePic.cshtml
+++ b/Views/Home/UserProfilePic.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BankManagement.ViewModel.AuthVM
 @{
     ViewData["Title"] = "UserProfilePic";
-    Layout = "~/Views/Shared/_MyHomeLayout.cshtml";
+    Layout = "~/Views/Shared/_MyLayoutDash.cshtml";
 }
 
 <link href="~/myLib/Layout/plugins/dropify/css/dropify.min.css" rel="stylesheet">
@@ -9,7 +9,7 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Add a New Land</h4>
+                <h4 class="card-title">Add a New Profile Picture</h4>
 
             </div><!--end card-header-->
             <div class="card-body">
