--- a/Views/Shared/_MyLayoutDash.cshtml
+++ b/Views/Shared/_MyLayoutDash.cshtml
@@ -102,7 +102,7 @@
                             <img src="~/images/ProfilePicture/@pic" alt="profile-user" class="rounded-circle thumb-xs" />
                         </a>
                         <div class="dropdown-menu dropdown-menu-end">
-                            <a class="dropdown-item" href="#"><i data-feather="user" class="align-self-center icon-xs icon-dual me-1"></i> Profile</a>
+                            <a class="dropdown-item" href="/profile"><i data-feather="user" class="align-self-center icon-xs icon-dual me-1"></i> Profile</a>
                             <a class="dropdown-item" href="#"><i data-feather="settings" class="align-self-center icon-xs icon-dual me-1"></i> Settings</a>
                             <div class="dropdown-divider mb-0"></div>
                             <a class="dropdown-item" href="/logout"><i data-feather="power" class="align-self-center icon-xs icon-dual me-1"></i> Logout</a>
