--- a/Views/Shared/_MyLayoutDash.cshtml
+++ b/Views/Shared/_MyLayoutDash.cshtml
@@ -63,7 +63,7 @@
                 
 
                 <li>
-                    <a href="javascript: void(0);"><i data-feather="grid" class="align-self-center menu-icon"></i><span>Apps</span><span class="menu-arrow"><i class="mdi mdi-chevron-right"></i></span></a>
+                    <a href="javascript: void(0);"><i data-feather="grid" class="align-self-center menu-icon"></i><span>Users</span><span class="menu-arrow"><i class="mdi mdi-chevron-right"></i></span></a>
                     <ul class="nav-second-level" aria-expanded="false">
                         <li>
                             <a href="javascript: void(0);"><i class="ti-control-record"></i>Email <span class="menu-arrow left-has-menu"><i class="mdi mdi-chevron-right"></i></span></a>
@@ -72,8 +72,22 @@
                                 <li><a href="apps-email-read.html">Read Email</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="apps-chat.html"><i class="ti-control-record"></i>Chat</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/usersmanagement"><i class="ti-control-record"></i>User List</a></li>
                         
+                    </ul>
+                </li>
+                <li>
+                    <a href="javascript: void(0);"><i data-feather="grid" class="align-self-center menu-icon"></i><span>Transactions</span><span class="menu-arrow"><i class="mdi mdi-chevron-right"></i></span></a>
+                    <ul class="nav-second-level" aria-expanded="false">
+                        <li>
+                            <a href="javascript: void(0);"><i class="ti-control-record"></i>Make Trans <span class="menu-arrow left-has-menu"><i class="mdi mdi-chevron-right"></i></span></a>
+                            <ul class="nav-second-level" aria-expanded="false">
+                                <li><a href="/transfer">Transfer</a></li>
+                                <li><a href="/paybill">Bill Payment</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="/trans"><i class="ti-control-record"></i>All Transactions</a></li>
+
                     </ul>
                 </li>
 
