--- a/Views/Shared/_MyLayoutDash.cshtml
+++ b/Views/Shared/_MyLayoutDash.cshtml
@@ -83,7 +83,16 @@
                             <a href="javascript: void(0);"><i class="ti-control-record"></i>Make Trans <span class="menu-arrow left-has-menu"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="nav-second-level" aria-expanded="false">
                                 <li><a href="/transfer">Transfer</a></li>
-                                <li><a href="/paybill">Bill Payment</a></li>
+
+                                <li>
+                                    <a href="javascript: void(0);"><i class="ti-control-record"></i>Bill Pay <span class="menu-arrow left-has-menu"><i class="mdi mdi-chevron-right"></i></span></a>
+                                    <ul class="nav-second-level" aria-expanded="false">
+                                        <li><a href="/mobilerecharge">Mobile Recharge</a></li>
+                                        <li><a href="/paybill">Electricity</a></li>
+                                    </ul>
+                                </li>
+
+                                
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="/trans"><i class="ti-control-record"></i>All Transactions</a></li>
