--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -37,8 +37,8 @@
                                     <a href="index.html" class="logo logo-admin">
                                         <img src="~/myLib/Layout/assets/images/logo-sm-dark.png" height="50" alt="logo" class="auth-logo">
                                     </a>
-                                    <h4 class="mt-3 mb-1 fw-semibold text-white font-18">Let's Get Started ABC Bank</h4>
-                                    <p class="text-muted  mb-0">Sign in to continue to ABC Bank.</p>
+                                    <h4 class="mt-3 mb-1 fw-semibold text-white font-18">Let's Get Started PSN Bank</h4>
+                                    <p class="text-muted  mb-0">Sign in to continue to PSN Bank.</p>
                                 </div>
                             </div>
                             <div class="card-body p-0">
@@ -158,7 +158,7 @@
                                                 <div class="col-sm-12">
                                                     <div class="custom-control custom-switch switch-success">
                                                         <input type="checkbox" class="custom-control-input" id="customSwitchSuccess2">
-                                                        <label class="form-label text-muted" for="customSwitchSuccess2">You agree to the ABC Bank <a href="#" class="text-primary">Terms of Use</a></label>
+                                                        <label class="form-label text-muted" for="customSwitchSuccess2">You agree to the PSN Bank <a href="#" class="text-primary">Terms of Use</a></label>
                                                     </div>
                                                 </div><!--end col-->
                                             </div><!--end form-group-->
@@ -175,7 +175,7 @@
                             </div><!--end card-body-->
                             <div class="card-body bg-light-alt text-center">
                                 <span class="text-muted d-none d-sm-inline-block">
-                                    ABC BANK © <script>
+                                    PSN Bank © <script>
                                                        document.write(new Date().getFullYear())
                                     </script>
                                 </span>
