--- a/Views/Users/UserManagement.cshtml
+++ b/Views/Users/UserManagement.cshtml
@@ -54,7 +54,7 @@
                                             <div class="btn-group" role="group">
                                                 <a href="#" class="btn btn-info">Info</a>
                                                 <a href="#" class="btn btn-success">Deactive</a>
-                                                <a href="#" class="btn btn-warning">Right</a>
+                                                @*<a href="#" class="btn btn-warning">Right</a>*@
                                             </div>
                                         }
                                         else
@@ -62,7 +62,7 @@
                                             <div class="btn-group" role="group">
                                                 <a href="#" class="btn btn-info">Info</a>
                                                 <a href="#" class="btn btn-success">Active</a>
-                                                <a href="#" class="btn btn-warning">Right</a>
+                                                @*<a href="#" class="btn btn-warning">Right</a>*@
                                             </div>
                                         }
                                     </td>
