--- a/Views/Users/UserProfile.cshtml
+++ b/Views/Users/UserProfile.cshtml
@@ -77,7 +77,7 @@
                 <div class="row">
                     <div class="col-lg-7 col-md-10">
                         <h1 class="display-2 text-white">Hello @Model.FullName</h1>
-                        <p class="text-white mt-0 mb-5">Welcome to ABC Bank Account. Thanks for being with us.</p>
+                        <p class="text-white mt-0 mb-5">Welcome to PSN Bank Account. Thanks for being with us.</p>
                         
                     </div>
                 </div>
