--- a/Views/Shared/_MyLayoutDash.cshtml
+++ b/Views/Shared/_MyLayoutDash.cshtml
@@ -62,20 +62,23 @@
                 <li class="menu-label mt-0">Main</li>
                 
 
-                <li>
-                    <a href="javascript: void(0);"><i data-feather="grid" class="align-self-center menu-icon"></i><span>Users</span><span class="menu-arrow"><i class="mdi mdi-chevron-right"></i></span></a>
-                    <ul class="nav-second-level" aria-expanded="false">
-                        <li>
-                            <a href="javascript: void(0);"><i class="ti-control-record"></i>Email <span class="menu-arrow left-has-menu"><i class="mdi mdi-chevron-right"></i></span></a>
-                            <ul class="nav-second-level" aria-expanded="false">
-                                <li><a href="apps-email-inbox.html">Inbox</a></li>
-                                <li><a href="apps-email-read.html">Read Email</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="/usersmanagement"><i class="ti-control-record"></i>User List</a></li>
-                        
-                    </ul>
-                </li>
+                @if (usertype == "1")
+                {
+                    <li>
+                        <a href="javascript: void(0);"><i data-feather="grid" class="align-self-center menu-icon"></i><span>Users</span><span class="menu-arrow"><i class="mdi mdi-chevron-right"></i></span></a>
+                        <ul class="nav-second-level" aria-expanded="false">
+                            @*<li>
+                        <a href="javascript: void(0);"><i class="ti-control-record"></i>Email <span class="menu-arrow left-has-menu"><i class="mdi mdi-chevron-right"></i></span></a>
+                        <ul class="nav-second-level" aria-expanded="false">
+                        <li><a href="apps-email-inbox.html">Inbox</a></li>
+                        <li><a href="apps-email-read.html">Read Email</a></li>
+                        </ul>
+                        </li>*@
+                            <li class="nav-item"><a class="nav-link" href="/usersmanagement"><i class="ti-control-record"></i>User List</a></li>
+
+                        </ul>
+                    </li>
+                }
                 <li>
                     <a href="javascript: void(0);"><i data-feather="grid" class="align-self-center menu-icon"></i><span>Transactions</span><span class="menu-arrow"><i class="mdi mdi-chevron-right"></i></span></a>
                     <ul class="nav-second-level" aria-expanded="false">
