--- a/Views/Shared/_MyLayoutDash.cshtml
+++ b/Views/Shared/_MyLayoutDash.cshtml
@@ -46,7 +46,7 @@
     <div class="left-sidenav">
         <!-- LOGO -->
         <div class="brand">
-            <a href="index.html" class="logo">
+            <a asp-action="Index" asp-controller="Home" class="logo">
                 <span>
                     <img src="~/myLib/Layout/assets/images/logo-sm.png" alt="logo-small" class="logo-sm">
                 </span>
