--- a/Views/Users/UserProfile.cshtml
+++ b/Views/Users/UserProfile.cshtml
@@ -168,7 +168,7 @@
                                         <div class="col-lg-6">
                                             <div class="form-group">
                                                 <label class="form-control-label" for="input-email">Email address</label>
-                                                <input type="email" name="UserEmail" id="input-email" class="form-control form-control-alternative" placeholder="@Model.UserEmail" value="@Model.UserEmail">
+                                                <input type="email" name="UserEmail" id="input-email" class="form-control form-control-alternative" placeholder="@Model.UserEmail" value="@Model.UserEmail" disabled readonly>
                                             </div>
                                         </div>
                                     </div>
